# vcsmc

./: .gitignore  .gitmodules  BUILDING.md  CMakeLists.txt  Makefile  README.md  kernels.txt  notes.txt
asm/: bg_color.asm  ffs_4bit_15khz.asm  ffs_4bit_32khz.asm  frame_skeleton.asm  frame_spec.yaml  kernel_bg.asm  p0_test.asm  pf_test.asm  ref_simple.asm
benchmarks/: pop-os_20191202212500_f5dbb39.json  roci_20191202212123_f5dbb39.json
doc/: epfg_overview.md  schema.md
doc/img/: first_input.tiff  first_result.tiff  frame-0006692.tiff  kernel_pf.tiff  kernel_pf_k_means.tiff  test_pf.tiff
html/: index.html
sim/: page1.yaml  page4.yaml
src/: CMakeLists.txt  HttpEndpoint.cpp  HttpEndpoint.h  Logger.cpp  Logger.h  Makefile  Task.cpp  Task.h  Timer.cpp  Timer.h  VideoDecoder.cc  VideoDecoder.h  Workflow.cpp  Workflow.h  adjacency_map.cc  adjacency_map.h  adjacency_map_unittests.cc  asm.cc  assembler.cc  assembler.h  assembler_unittests.cc  atari_ntsc_abgr_color_table.cc  atari_ntsc_abgr_color_table.h  atari_ntsc_lab_color_table.h  atari_ntsc_laba_color_table.h  atari_ntsc_nyuv_color_table.h  atari_ntsc_rgb_color_table.cc  atari_ntsc_rgb_color_table.h  background_color_strategy.cc  background_color_strategy.h  bed.cc  bit_map.cc  bit_map.h  bit_map_unittests.cc  block.cc  block.h  block_unittests.cc  blur_kernel_table.cc  build_codon_table.cc  build_error_distances.cc  (+181 more)
src/auto/: color_table.cc
src/cl/: ciede2k.cl  rgb_to_lab.cl
src/halide/: CMakeLists.txt  variance_generator.cc
src/parts/: and.cc  and.h  block.cc  block.h  d1.cc  d1.h  d2.cc  d2.h  dgnor.cc  dgnor.h  dgnot.cc  dgnot.h  dir.cc  dir.h  dl.cc  dl.h  dxnor.cc  dxnor.h  f1.cc  f1.h  l.cc  l.h  net.cc  net.h  not.cc  not.h  part.cc  part.h  waa.cc  waa.h  xor.cc  xor.h
src/schemas/: Duration.fbs  FrameGroup.fbs  GroupStats.fbs  MovieStats.fbs  SourceFrame.fbs  TargetFrame.fbs
tia/: build_frame.v  sr.v  sr_sim.v  tia_audio_clock_divider.v  tia_ball_position_counter.v  tia_ball_position_counter_sim.v  tia_biphase_clock.v  tia_biphase_clock_sim.v  tia_color_lum_registers.v  tia_color_lum_registers_sim.v  tia_d1.v  tia_d1_sim.v  tia_d1r.v  tia_d1r_sim.v  tia_d2.v  tia_d2_sim.v  tia_divide_by_three.v  tia_divide_by_three_sim.v  tia_dl.v  tia_dl_sim.v  tia_f1.v  tia_f1_sim.v  tia_f3.v  tia_f3_sim.v  tia_horizontal_lfsr.v  tia_horizontal_lfsr_decoder.v  tia_horizontal_lfsr_decoder_sim.v  tia_horizontal_lfsr_sim.v  tia_horizontal_timing.v  tia_horizontal_timing_sim.v  tia_l.v  tia_l_sim.v  tia_lfsr.v  tia_missile_position_counter.v  tia_missile_position_counter_sim.v  tia_motion_registers.v  tia_motion_registers_sim.v  tia_no_audio.v  tia_player_graphics.v  tia_player_graphics_register.v  (+12 more)
tia/tools/: sum_bin.py  test_all.py
tools/: collect_benchmarks.sh  make_5bit.py  make_blur_table.py  make_color_tables.py  make_movie.py  make_rgb_to_lab_test_data.py  preprocess_images.py
tools/check/: .gitignore  check.html
